Fix overflow.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -62,7 +62,7 @@ pre
   border-color: mix($foreground-color, $background-color)
   font-family: "Menlo", "Bitstream Vera Sans Mono", "Deja Vu Sans Mono", "Andale Mono", monospace
   color: $background-color
-  overflow: scroll
+  overflow: auto
 
 blockquote
   color: lighten($foreground-color, 25%)
